# smu-starter-projects

./: README.md  update_labs.py
ai-103-agent-basics/: .env.example  .gitignore  README.md  requirements.txt  test_client.py
ai-103-agent-knowledge/: .env.example  .gitignore  README.md  requirements.txt
ai-103-agent-multi/: .env.example  .gitignore  README.md  requirements.txt
ai-103-capstone/: .env.example  .gitignore  README.md  requirements.txt  seed_index.py  test_client.py
ai-103-chat-tools/: .env.example  .gitignore  README.md  requirements.txt  test_client.py
ai-103-foundry-infra/: .env.example  .gitignore  README.md  deploy.sh  requirements.txt
ai-103-ingest-extract/: .env.example  .gitignore  README.md  requirements.txt
ai-103-keyless-auth/: .env.example  .gitignore  README.md  requirements.txt
ai-103-model-explorer/: .env.example  .gitignore  README.md  compare_models.py  requirements.txt  toolcall_probe.py
ai-103-rag-eval/: .env.example  .gitignore  README.md  eval_data.jsonl  requirements.txt
ai-103-responsible-ai/: .env.example  .gitignore  README.md  eval_data.jsonl  requirements.txt
ai-103-text-speech/: .env.example  .gitignore  README.md  requirements.txt
ai-103-vision/: .env.example  .gitignore  README.md  requirements.txt
ai-901-agent-client/: .env.example  README.md  agent_client.py  create_agent.py  (+2 more)
python-testing-quality/: pyproject.toml  requirements.txt
python-testing-quality/app/: crud.py  database.py  external_api.py  main.py  models.py
python-testing-quality/tests/: conftest.py  test_external_api.py  test_products.py
(+2058 files in other folders)
